fix: query method on getAll
Signed-off-by: bayusuryowibowo <bayusuryowibowo@gmail.com>